src/test/resources/validation/error/resolverReturningInterfaceIllegalArguments/schema.graphqls
type Film implements Node @table {
  id: ID!
  title: String!
  nodeRef: Node @splitQuery
}


type Query {
  film(title: String!): Kull
}
